# sample-agentic-data-quality-pipeline

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  TRACKING.md  pyproject.toml
agent/: .bedrock_agentcore.yaml  .dockerignore  Dockerfile  ac_deploy.sh  agent.py  requirements.txt  system_prompt.md
agent/config/: quality_thresholds.yaml
agent/config/schema_baselines/: yellow_taxi.json
agent/tools/: apply_transform.py  check_schema.py  diagnose_issue.py  log_decision.py  notify_owner.py  parse_dq_event.py  quarantine_records.py  scan_quality.py
agent/utils/: athena_client.py  dynamodb_client.py  metrics.py
cdk/: app.py  cdk.json  glue_dq_ruleset.dqdl
cdk/lambda/dq_event_bridge/: handler.py
cdk/stacks/: data_lake_stack.py  glue_dq_stack.py  notification_stack.py  observability_stack.py
dashboard/: api.py  app.py
dashboard/pages/: 0_control_panel.py  1_dashboard.py  1_overview.py  2_agent_activity.py  2_scan_details.py  3_agent_traces.py  4_cost_tracker.py  5_remediation_history.py
dashboard/ui/: index.html  package-lock.json  package.json
dashboard/ui/src/: App.tsx  api.ts  types.ts
dashboard/ui/src/components/: AgentActivity.tsx  ControlPanel.tsx  QualityDashboard.tsx
dashboard/utils/: cloudwatch.py  dynamodb.py
data/: chaos_config.yaml  chaos_injector.py  download_data.py  upload_to_s3.py
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  blog-draft.md
docs/images/: architecture-diagram-v2.drawio  architecture-diagram.drawio
